--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
-    #          ddl-auto: create
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
